0.1.0-rc2 ============== - Fixed: Button central alignment

--- a/assets/components/clicktocall/css/clicktocall.css
+++ b/assets/components/clicktocall/css/clicktocall.css
@@ -2,9 +2,10 @@
     display: none;
     position: fixed;
     bottom: 60px;
-    right: 40%;
+    right: 50%;
     cursor: pointer;
     z-index: 999;
+    margin-right: -35px;
 }
 
 #ClickToCall .click-to-call-phone {
